compound path refactor